--- a/_includes/content.html
+++ b/_includes/content.html
@@ -128,6 +128,9 @@
           document.getElementsByClassName("reward-qr-code")[0].style.display="none";
         }
       }
+      document.onreadystatechange = function(e) {
+        showComment()
+      }
     </script>
   </div>
 </div>
