--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -397,13 +397,10 @@ footer {
 
 /* (copyright.html) CSS start */
 .copyright {
+  font-size: small;
   text-align: center;
-  padding: 50px 20px 20px 20px;
-
-  p {
-    color: #999;
-    font-size: 1em;
-  }
+  padding: 20px 10px 10px 10px;
+  color: #999;
 
   a {
     color: #999;
